# vitrine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
skills/vitrine-api/: PROVENANCE.yaml  SKILL.md
src/vitrine/: __init__.py  _types.py  _utils.py  artifacts.py  cli.py  dispatch.py  export.py  redaction.py  renderer.py  server.py  study_manager.py
src/vitrine/skills/draft-paper/: SKILL.md
src/vitrine/skills/export-report/: SKILL.md
src/vitrine/skills/reproduce-study/: SKILL.md
src/vitrine/static/: index.html
src/vitrine/static/css/: base.css  cards.css  files.css  forms.css  neo.css  print.css  tables.css
src/vitrine/static/js/: actions.js  cards.js  export-ui.js  files.js  forms.js  init.js  plotly.js  renderers.js  responses.js  state.js  status.js  studies.js  tables.js  theme.js  toc.js  websocket.js
tests/: conftest.py  test_api.py  test_artifacts.py  test_cli.py  test_dispatch.py  test_export.py  test_files.py  test_forms.py  test_redaction.py  test_renderer.py  test_server.py  test_study_manager.py  test_types.py
